plugins {
    alias(libs.plugins.androidLibrary)
}

android {
    namespace 'com.monke.main'
    compileSdk 34

    defaultConfig {
        minSdk 26

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        consumerProguardFiles "consumer-rules.pro"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
}


dependencies {
    implementation project(':domain:identity')
    implementation project(':domain:rental')
    implementation project(':domain:data')

    implementation libs.dagger2
    annotationProcessor libs.dagger.compiler
    implementation libs.lifecycle.livedata
}